@@ -240,7 +240,7 @@ class Toolbox {
 
 
     // Adding JQuery.
-    $js_lib = self::getFileContents(Config::$krexxdir . 'resources/jsLibs/' . Config::getConfigValue('render', 'jsLib'));
+    $js_lib = self::getFileContents(Config::$krexxdir . 'resources/jsLibs/jquery-1.11.0.js');
     $js_wrapper = self::getFileContents(Config::$krexxdir . 'resources/jsLibs/wrapper.js');
     $js = str_replace('{jQueryGoesHere}', $js_lib, $js_wrapper);
     // Krexx.js is comes directly form the template.
