@@ -56,7 +56,6 @@ class Help {
     'folder' => 'This is the folder where kreXX will store it\'s logfiles.',
     'maxfiles' => 'How many logfiles do you want to store inside your logging folder?<br/> When there are more files than this number, the older files will get deleted.',
     'skin' => 'Choose a skin here. We have provided kreXX with only one skins: "hans".',
-    'jsLib' => 'kreXX uses in the frontend jQuery. We have bundled it with jQuery 1.11.0, but it may interfere<br/> with the library that you use. To use your own libs, you can point kreXX to your jQuery file.<br /> Entering an empty value will prevent kreXX from loading any library.',
     'currentSettings' => 'kreXX\'s configuration can be edited here, changes will be stored in a cookie and overwrite the ini and factory settings.<br/> <strong>Please note, that these are only local settings. They only affect this browser.</strong>',
     'registerAutomatically' => 'This option registers the fatal errorhandler as soon as kreXX is included. When a fatal error occures,<br/> kreXX will offer a backtrace and an analysis of the all objects in it. PHP always clears the stack in case of a fatal error,<br/> so kreXX has to keep track of it. <strong>Be warned:</strong> This option will dramatically slow down your requests. Use this only when you have to.<br/> It is by far better to register the errorhandler yourself with <strong>\krexx::registerFatal();</strong> and later unregister it<br/> with <strong>\krexx::unregisterFatal();</strong> tp prevent a slowdown.',
     'detectAjax' => 'kreXX tries to detect whether a request is made via ajax. When it is detected, it will do no output at all. The AJAX detection can be disabled here.',
