@@ -1,6 +1,7 @@
 1.3.4
 - Bugfix: Hans skin tries to close some left-over html tag to get a
   proper display
+- Change: Removed the jQuery setting
 
 1.3.3
 - kreXX will now work without a writable chunks folder, but this will
